Remove games from config when deleted
